--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,7 @@
 <body>
 	<div id="pageContainer">
 		<div id="header" class="clearAfter">
-			<a href="/" title="DC Bears Fans Home"><img id="logo" alt="DC Bears Fans" title="DC Bears Fans" src="../images/clubname1.gif" border="0" /></a>
+			<a href="/" title="DC Bears Fans Home"><img id="logo" alt="DC Bears Fans" title="DC Bears Fans" src="../images/clubName1.gif" border="0" /></a>
 			<ul id="topNav">
 				<li class=""><a title="Home" href="../">Home</a></li>
 				<li class="current"><a title="About" href="../about/">About</a></li>
