--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 	<div id="pageContainer">
 		<div id="header" class="clearAfter">
-			<a href="/" title="DC Bears Fans Home"><img id="logo" alt="DC Bears Fans" title="DC Bears Fans" src="/images/clubName.gif" border="0" /></a>
+			<a href="/" title="DC Bears Fans Home"><img id="logo" alt="DC Bears Fans" title="DC Bears Fans" src="/images/clubName1.gif" border="0" /></a>
 			<ul id="topNav">
 				<li class="current"><a title="Home" href="">Home</a></li>
 				<li class=""><a title="About" href="/about/">About</a></li>
@@ -60,7 +60,7 @@
                 	<div class="roundCornerBottom left">
                         <h2>Latest posts</h2>
 						<ul id="linkList">
-							<li class="clearAfter"><span class="date">09/05/19</span><span class="linkTitle"><a href="/news/2019-09-05.asp" class="" title="Chicago Bears v. Green Bay Packers">v. Green Bay Packers</a></span></li>
+							<li class="clearAfter"><span class="date">09/05/19</span><span class="linkTitle"><a href="/news/2019-09-05.html" class="" title="Chicago Bears v. Green Bay Packers">v. Green Bay Packers</a></span></li>
 						</ul>
 					</div>
 				</div>
