--- a/about/index.html
+++ b/about/index.html
@@ -42,9 +42,7 @@
 				<li class=""><a title="Home" href="../">Home</a></li>
 				<li class="current"><a title="About" href="../about/">About</a></li>
 				<li class=""><a title="Club News &amp; Events" href="../news/">Club News &amp; Events</a></li>
-				<li class=""><a title="Bear Links" href="../links/">Bear Links</a></li>
-				<li class=""><a title="Photo Gallery" href="../photos/">Photo Gallery</a></li>
-				<li class="last"><a title="Contact" href="../contact/">Contact</a></li>
+				<li class="last"><a title="Bear Links" href="../links/">Bear Links</a></li>
             </ul>
 		</div>
 		<div id="body" class="clearAfter">
