--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 				<li class="current"><a title="Home" href="">Home</a></li>
 				<li class=""><a title="About" href="/about/">About</a></li>
 				<li class=""><a title="Club News &amp; Events" href="/news/">Club News &amp; Events</a></li>
-				<li class=""><a title="Bear Links" href="/links/">Bear Links</a></li>
-				<li class=""><a title="Photo Gallery" href="/photos/">Photo Gallery</a></li>
-				<li class="last"><a title="Contact" href="/contact/">Contact</a></li>
+				<li class="last"><a title="Bear Links" href="/links/">Bear Links</a></li>
             </ul>
 		</div>
 		<div id="body" class="clearAfter">
@@ -60,6 +58,7 @@
                 	<div class="roundCornerBottom left">
                         <h2>Latest posts</h2>
 						<ul id="linkList">
+							<li class="clearAfter"><span class="date">09/15/19</span><span class="linkTitle"><a href="/news/2019-09-15.html" class="" title="Chicago Bears v. Denver Broncos">v. Denver Broncos</a></span></li>
 							<li class="clearAfter"><span class="date">09/05/19</span><span class="linkTitle"><a href="/news/2019-09-05.html" class="" title="Chicago Bears v. Green Bay Packers">v. Green Bay Packers</a></span></li>
 						</ul>
 					</div>
