--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,7 @@
 				<ul class="stripe1 clearAfter">
 				<li class="date">Thu Sep 5</li>
 				<li class="team">Packers</li>
-				<li class="time">8:20pm</li>
+				<li class="time">L 3-10</li>
 				</ul>
 				</li>
 				<li>
@@ -181,7 +181,7 @@
 				<li>
 				<ul class="stripe1 record clearAfter">
 				<li>
-									  Record: 0-0</li>
+									  Record: 0-1</li>
 				</ul>
 				</li>
 				</ul>
