--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 				</div>
 			</div>
 			<div id="rightCol">
-                <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fdcbearsfans.com&amp;layout=standard&amp;show_faces=false&amp;width=290&amp;action=like&amp;colorscheme=dark&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:290px; height:35px;" allowTransparency="true"></iframe>
-				<ul id="schedule" xmlns:gphoto="http://schemas.google.com/photos/2007" xmlns:media="http://search.yahoo.com/mrss/" xmlns:opensearch="http://a9.com/-/spec/opensearchrss/1.0/">
+                <iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fdcbearsfans.com&amp;layout=standard&amp;show_faces=false&amp;width=290&amp;action=like&amp;colorscheme=dark&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:290px; height:35px;" allowTransparency="true"></iframe>
+				<ul id="schedule">
 				<li>
 				<ul class="header clearAfter">
 				<li class="date">Date</li>
