--- a/links/index.html
+++ b/links/index.html
@@ -10,8 +10,8 @@
 	<meta property="og:site_name" content="DC Bears Fans"/> 
 	<meta property="fb:admins" content="jimbillimoria"/> 
 
-    <script src="../scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
-	<link rel="stylesheet" type="text/css" href="../styles/screen.css" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../styles/screen.css" />
 	<!--[if IE]>
 	<style type="text/css">
 	  .clearAfter {
@@ -59,13 +59,11 @@
 				</div>
 			</div>
 		</div>
-		<div id="footer">
-			<div class="logoDiv">
-				<a class="external logo" href="http://www.facebook.com/133758093341380/" title="Visit us on Facebook" target="_blank"><img src="../images/facebookGraphic.jpg" alt="Visit us on Facebook" /></a>
-				<a class="external logo" href="http://twitter.com/DCBearsFans" title="Follow us on Twitter" target="_blank"><img src="../images/twitterGraphic.jpg" alt="Follow us on Twitter" /></a>
-			</div>
-			&copy; DCBearsFans.com <script type="text/javascript">document.write(new Date().getFullYear())</script>
-		</div>	
+    <script> 
+    $(function(){
+      $("#footer").load("/includes/footer.html"); 
+    });
+    </script> 
 	</div>
 </body>
 </html>
