--- a/links/index.html
+++ b/links/index.html
@@ -59,6 +59,7 @@
 				</div>
 			</div>
 		</div>
+		<div id="footer" />
     <script> 
     $(function(){
       $("#footer").load("/includes/footer.html"); 
