--- a/links/index.html
+++ b/links/index.html
@@ -60,7 +60,7 @@
 			</div>
 		</div>
 		<div id="footer" />
-		<script> $(function(){ $("#footer").replaceWith("/includes/footer.html"); }); </script> 
+		<script> $(function(){ $("#footer").load("/includes/footer.html"); }); </script> 
 	</div>
 </body>
 </html>
