--- a/links/index.html
+++ b/links/index.html
@@ -36,8 +36,15 @@
 </head>
 <body>
 	<div id="pageContainer">
-		<div id="header" class="clearAfter" />
-		<script> $(function(){ $("#header").load("/includes/header.html"); }); </script> 
+		<div id="header" class="clearAfter">
+			<a href="/" title="DC Bears Fans Home"><img id="logo" alt="DC Bears Fans" title="DC Bears Fans" src="../images/clubName1.gif" border="0" /></a>
+			<ul id="topNav">
+				<li class=""><a title="Home" href="../">Home</a></li>
+				<li class=""><a title="About" href="../about/">About</a></li>
+				<li class=""><a title="Club News &amp; Events" href="../news/">Club News &amp; Events</a></li>
+				<li class="current last"><a title="Bear Links" href="../links/">Bear Links</a></li>
+            </ul>
+		</div>
 		<div id="body" class="clearAfter">
 				<div class="roundCornerTop">
 					<div class="roundCornerBottom">
