--- a/links/index.html
+++ b/links/index.html
@@ -35,7 +35,7 @@
     </script>
 
 </head>
-<body onload="pageLoad()">
+<body>
 	<div id="pageContainer">
 		<div id="header" class="clearAfter">
 			<script> $(function(){ $("#header").load("/includes/header.html"); }); </script> 
