--- a/links/index.html
+++ b/links/index.html
@@ -37,9 +37,7 @@
 </head>
 <body>
 	<div id="pageContainer">
-		<div id="header" class="clearAfter">
-			<script> $(function(){ $("#header").load("/includes/header.html"); }); </script> 
-		</div>
+		<div id="header" class="clearAfter"></div>
 		<div id="body" class="clearAfter">
 				<div class="roundCornerTop">
 					<div class="roundCornerBottom">
