--- a/links/index.html
+++ b/links/index.html
@@ -37,6 +37,7 @@
 <body>
 	<div id="pageContainer">
 		<div id="header" class="clearAfter"></div>
+		<script> $(function(){ $("#header").load("/includes/header.html"); }); </script> 
 		<div id="body" class="clearAfter">
 				<div class="roundCornerTop">
 					<div class="roundCornerBottom">
@@ -51,7 +52,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="footer" />
+		<div id="footer" ></div>
 		<script> $(function(){ $("#footer").load("/includes/footer.html"); }); </script> 
 	</div>
 </body>		
