--- a/about/index.html
+++ b/about/index.html
@@ -11,6 +11,7 @@
 	<meta property="fb:admins" content="jimbillimoria"/> 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="/scripts/pageLoad.js"></script>
 	<link rel="stylesheet" type="text/css" href="../styles/screen.css" />
 	<!--[if IE]>
 	<style type="text/css">
@@ -36,15 +37,7 @@
 </head>
 <body>
 	<div id="pageContainer">
-		<div id="header" class="clearAfter">
-			<a href="/" title="DC Bears Fans Home"><img id="logo" alt="DC Bears Fans" title="DC Bears Fans" src="../images/clubName1.gif" border="0" /></a>
-			<ul id="topNav">
-				<li class=""><a title="Home" href="../">Home</a></li>
-				<li class="current"><a title="About" href="../about/">About</a></li>
-				<li class=""><a title="Club News &amp; Events" href="../news/">Club News &amp; Events</a></li>
-				<li class="last"><a title="Bear Links" href="../links/">Bear Links</a></li>
-            </ul>
-		</div>
+		<div id="header" class="clearAfter"></div>
 		<div id="body" class="clearAfter">
 			<div id="leftCol">
 				<div class="roundCornerTop left">
@@ -69,4 +62,5 @@
 		<script> $(function(){ $("#footer").load("/includes/footer.html"); }); </script> 
 	</div>
 </body>
+<script src="/scripts/pageLoad.js"></script>
 </html>
