--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                 	<div class="roundCornerBottom left">
                         <h2>Latest posts</h2>
 						<ul id="linkList">
+							<li class="clearAfter"><span class="date">09/29/19</span><span class="linkTitle"><a href="/news/2019-09-29.html" class="" title="Chicago Bears v. Minnesota Vikings">v. Minnesota Vikings</a></span></li>
+							<li class="clearAfter"><span class="date">09/23/19</span><span class="linkTitle"><a href="/news/2019-09-23.html" class="" title="Chicago Bears v. Washington Redskins">v. Washington Redskins</a></span></li>
 							<li class="clearAfter"><span class="date">09/15/19</span><span class="linkTitle"><a href="/news/2019-09-15.html" class="" title="Chicago Bears v. Denver Broncos">v. Denver Broncos</a></span></li>
-							<li class="clearAfter"><span class="date">09/05/19</span><span class="linkTitle"><a href="/news/2019-09-05.html" class="" title="Chicago Bears v. Green Bay Packers">v. Green Bay Packers</a></span></li>
 						</ul>
 					</div>
 				</div>
